--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
 	    <artifactId>jstl</artifactId>
 	    <version>${jstl.version}</version>
 	</dependency>
-
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.28</version>
+	</dependency>
   </dependencies>
   
   <build>
